Bug 440783 - Missing icons for buttons in the KF5 variant of the online quotes editor
Summary: Missing icons for buttons in the KF5 variant of the online quotes editor
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: Online quotes widget (other bugs)
Version First Reported In: 8.1.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Dawid Wróbel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-09 12:31 UTC by Ralf Habacker
Modified: 2022-04-08 04:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.1.1
Sentry Crash Report:


Attachments
Screenshot (204.25 KB, image/png)
2021-08-09 12:31 UTC, Ralf Habacker
Details
attachment-9792-0.html (127 bytes, text/html)
2021-08-09 12:50 UTC, Dawid Wróbel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2021-08-09 12:31:45 UTC
Created attachment 140601 [details]
Screenshot

In the variant for KF5, the online quotes editor does not display symbols defined with KGuiItem (https://invent.kde.org/office/alkimia/-/blob/master/src/alkonlinequoteswidget.cpp#L143).

STEPS TO REPRODUCE
1. download portable binary from https://binary-factory.kde.org/job/Alkimia_Nightly_win64/
2. unpack, enter the 'bin' directory and start 'onlinequoteseditor5'
3. inspect buttons in application window

OBSERVED RESULT
The buttons for 'update', 'delete', 'check source', 'show page' and 'new' do not show an icon

EXPECTED RESULT
The mentioned buttons should show the referenced icons

SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version: 5.84
Qt Version: 5.15

ADDITIONAL INFORMATION
The problem is KF5-specific, since it does not occur with the KDE4 variant.
The problem is not limited to the Windows platform, as it is also seen on a Linux platform.
Comment 1 Dawid Wróbel 2021-08-09 12:50:15 UTC
Created attachment 140602 [details]
attachment-9792-0.html

I'll get it fixed.
Comment 2 Ralf Habacker 2022-03-17 08:22:41 UTC
With a Qt5 build of the onlinequoteseditor the 'Delete' and 'New' button still do not show an icon.
Comment 3 Ralf Habacker 2022-03-18 18:16:05 UTC
As indicated with https://invent.kde.org/office/alkimia/-/commit/2c189c7869d7825a6be7fb40eb239a64903633a4 it looks that with the KF5 port either KGuiItem has a different behavior compared to KDE4 or the icons used there are not available with KF5.
Comment 4 Ralf Habacker 2022-03-18 20:55:08 UTC
Git commit f2fd5a8ae8c8ddd0385095c0c8240cf7ad76fc4a by Ralf Habacker.
Committed on 18/03/2022 at 20:54.
Pushed by habacker into branch '8.1'.

Fix display of button icons in KF5 builds

KGuiItem from KF5 only shows an icon from theme, if
provided as name not as icon.
FIXED-IN:8.1.1

M  +5    -5    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/f2fd5a8ae8c8ddd0385095c0c8240cf7ad76fc4a
Comment 5 Ralf Habacker 2022-03-18 20:55:16 UTC
Git commit 9eadd09664cfe843531af8f1fc4118310ac79b01 by Ralf Habacker.
Committed on 18/03/2022 at 20:54.
Pushed by habacker into branch '8.1'.

Add missing icons

M  +14   -0    src/alkonlinequoteswidget.ui
M  +3    -0    tools/onlinequoteseditor/mainwindow.ui

https://invent.kde.org/office/alkimia/commit/9eadd09664cfe843531af8f1fc4118310ac79b01
Comment 6 Ralf Habacker 2022-04-08 04:41:41 UTC
Git commit 6fb2855446ddd5a0b0d0b68451ee0d4d02d4e07f by Ralf Habacker.
Committed on 08/04/2022 at 04:32.
Pushed by habacker into branch 'master'.

Fix display of button icons in KF5 builds

KGuiItem from KF5 only shows an icon from theme, if provided as name not
as icon.
FIXED-IN:8.1.1

M  +5    -5    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/6fb2855446ddd5a0b0d0b68451ee0d4d02d4e07f