Fix display of button icons in KF5 builds

KGuiItem from KF5 only shows an icon from theme, if provided as name not
as icon.

BUG:440783
FIXED-IN:8.1.1